--- a/.github/workflows/auto-works.yml
+++ b/.github/workflows/auto-works.yml
@@ -32,6 +32,13 @@ jobs:
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: push github-contribution-grid-snake.svg 
+        uses: crazy-max/ghaction-github-pages@v2.5.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
