--- a/.github/workflows/auto-works.yml
+++ b/.github/workflows/auto-works.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch: 
   schedule:
     - cron: "0 */24 * * *"
+  push:
+    branches:
+      - master
 
 jobs:
   update-readme:
@@ -38,7 +41,7 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
