--- a/.github/workflows/auto-works.yml
+++ b/.github/workflows/auto-works.yml
@@ -41,7 +41,7 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-readme-with-blog:
     name: Update this repo's README with latest blog posts
