--- a/.github/workflows/auto-works.yml
+++ b/.github/workflows/auto-works.yml
@@ -34,7 +34,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: push github-contribution-grid-snake.svg 
         uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
